tests/paczka1/fuzzy1/20952326.err
Error in line 5: S130 S34 74,8
Error in line 10: ktui1 A>74 58,6
Error in line 6: 8iuhRhkv A29 14,3
Error in line 11: 8iuhRhkv A274 96,7
Error in line 14: M4AslxE S130 4,8
Error in line 7: ktui1 A274 82,5
Error in line 27: S130 S130 -2,7
Error in line 26: 8iuhRhkv A29 18,9
